Изменено расположение файла базы данных; Добавлены обработчики исключений, возникающих при одновременном редактировании данных

--- a/FriendOrganizer.UI/App.config
+++ b/FriendOrganizer.UI/App.config
@@ -5,7 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
  <connectionStrings>
-    <add name="FriendOrganizerDb" connectionString="Data Source=(localdb)\MSSQLLocalDB;           Initial Catalog = FriendOrganizerDatabase;           Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="FriendDb" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename='C:\Projects\FriendOrginizer\FriendOrganizer.DataAccess\App_Data\FriendDb.mdf';Integrated Security=True"
+ providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
